Revert network updates